--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,6 +1,7 @@
 <ul>
-  <li><a href="#home">Home</a></li>
-  <li><a href="#news">News</a></li>
-  <li><a href="#contact">Contact</a></li>
-  <li style="float:right"><a class="active" href="#about">About</a></li>
+  <li><a ><i class="fa fa-user fa-2x"></i>Login</a></li>
+  <li><a ><i class="fa fa-reorder fa-2x"></i>Transaktionen</a></li>
+
+  <li style="float:right"><a class="active" ><i class="fa fa-user-circle fa-2x"></i>Mein Konto</a></li>
+
 </ul>
