add routing to login and register

--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -3,7 +3,7 @@
   <div id="formContent">
     <!-- Tabs Titles -->
     <h2 class="active"> Anmelden </h2>
-    <h2 class="inactive underlineHover">Registrieren </h2>
+    <h2 class="inactive underlineHover" routerLink="/register">Registrieren </h2>
 
     <!-- Icon -->
     <div class="fadeIn first">
@@ -13,7 +13,7 @@
     <!-- Login Form -->
     <form>
       <input type="text" id="login" class="fadeIn second" name="login" placeholder="Email">
-      <input type="text" id="password" class="fadeIn third" name="login" placeholder="Passwort">
+      <input type="password" id="password" class="fadeIn third" name="login" placeholder="Passwort">
       <input type="submit" class="fadeIn fourth" value="Log In">
     </form>
 
