--- a/src/app/login/login.component.css
+++ b/src/app/login/login.component.css
@@ -116,7 +116,8 @@ input[type=button]:active, input[type=submit]:active, input[type=reset]:active  
   transform: scale(0.95);
 }
 
-input[type=text] {
+input[type=text], input[type=password], input[type=password]  {
+
   background-color: rgba(84, 84, 84, 0.44);
   border: none;
   color: white;
@@ -141,6 +142,7 @@ input[type=text] {
 input[type=text]:focus {
   background-color: #fff;
   border-bottom: 2px solid #00a9bf;
+  color: #1c1c1c;
 }
 
 input[type=text]::placeholder {
