--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,6 +1,6 @@
 <ul>
-  <li><a ><i class="fa fa-user fa-2x"></i>Login</a></li>
-  <li><a ><i class="fa fa-reorder fa-2x"></i>Transaktionen</a></li>
+  <li><a routerLink="/login"><i class="fa fa-user fa-2x"></i>Login</a></li>
+  <li><a routerLink="/transaktion"><i class="fa fa-reorder fa-2x"></i>Transaktionen</a></li>
 
   <li style="float:right"><a class="active" ><i class="fa fa-user-circle fa-2x"></i>Mein Konto</a></li>
 
