--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -1,1 +1,30 @@
-<p>register works!</p>
+<body>
+<div class="wrapper fadeInDown">
+  <div id="formContent">
+    <!-- Tabs Titles -->
+    <h2 class="inactive underlineHover" routerLink="/login"> Anmelden </h2>
+    <h2 class="active">Registrieren </h2>
+
+    <!-- Icon -->
+    <div class="fadeIn first">
+      <!--Img Tag hier Felix -->
+    </div>
+
+    <!-- Login Form -->
+    <form>
+      <input type="text" id="vorname" class="fadeIn second" name="vorname" placeholder="Vorname">
+      <input type="text" id="nachname" class="fadeIn second" name="nachname" placeholder="Nachname">
+      <input type="text" id="email" class="fadeIn second" name="email" placeholder="Email">
+      <input type="text" id="tele" class="fadeIn second" name="tele" placeholder="Telefonnummer">
+      <input type="password" id="password" class="fadeIn third" name="login" placeholder="Passwort">
+      <input type="submit" class="fadeIn fourth" value="Log In">
+    </form>
+
+    <!-- Passwort vergessen -->
+    <div id="formFooter">
+      <a class="underlineHover">Password vergessen?</a>
+    </div>
+
+  </div>
+</div>
+</body>
