finish Transaction site add Withdrawl component add deposit component

--- a/src/app/card/card.component.html
+++ b/src/app/card/card.component.html
@@ -1,13 +1,17 @@
 <div class="card">
   <div class="grid-container">
-    <div class="left-side-up"><p class="title">Amazon</p></div>
-    <div class="left-side-down"><p class="subTitle">Brett</p></div>
-    <div class="right-side"><p class="trans">-30.00€</p></div>
-    <div class="middle-up"></div>
-    <div class="middle-down"></div>
-    <div class="bottom-space"></div>
-  </div>
+  <div class="left-up"><p class="title">Amazon</p></div>
+  <div class="left-middle"><p class="subTitle">Brett</p></div>
+  <div class="left-down"></div>
+  <div class="middle"></div>
+  <div class="right"><p class="trans">-30.00€</p></div>
+</div>
 
 
 
 </div>
+
+
+
+
+
