--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -1,14 +1,18 @@
 <body>
 <div class="wrapper fadeInDown">
   <div id="formContent">
+
+    <!-- Icon -->
+
+    <div class="fadeIn first">
+      <i class="fa fa-user fa-2x"></i>
+    </div>
     <!-- Tabs Titles -->
     <h2 class="inactive underlineHover" routerLink="/login"> Anmelden </h2>
     <h2 class="active">Registrieren </h2>
 
-    <!-- Icon -->
-    <div class="fadeIn first">
-      <!--Img Tag hier Felix -->
-    </div>
+
+
 
     <!-- Login Form -->
     <form>
