--- a/src/app/card/card.component.css
+++ b/src/app/card/card.component.css
@@ -4,18 +4,20 @@
   font-size: 18pt;
   font-weight: bold;
   padding-left: 20%;
+  margin-top: 6%;
 }
 
 .subTitle{
   font-size: 14pt;
   padding-left: 20%;
-  margin-top: 0%;
+  margin-top: -5%;
 
 }
 
 .trans{
   font-size: 14pt;
-  margin-top: 0%;
+  margin-top: 13%;
+  margin-left: 50%;
 }
 
 p {
@@ -29,36 +31,33 @@ p {
   height: 10vh;
   width: 60%;
   background-color: #161616;
-  box-shadow: 0px 17px 42px 22px rgba(0,0,0,0.68);
+  box-shadow: 0px 0px 20px 10px rgba(0,0,0,0.30);
   margin:auto;
-
+  margin-bottom: 30px;
 }
-
 
 
 
 .grid-container {
   display: grid;
-  grid-template-columns: 0.5fr 1.5fr 0.5fr;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
   grid-template-rows: 1fr 1fr 1fr;
   gap: 0px 0px;
   grid-template-areas:
-    "left-side-up middle-up right-side"
-    "left-side-down middle-down right-side"
-    "bottom-space bottom-space bottom-space";
+    "left-up middle middle right"
+    "left-middle middle middle right"
+    "left-down middle middle right";
 }
 
-.left-side-up { grid-area: left-side-up; }
+.left-up { grid-area: left-up; }
 
-.left-side-down { grid-area: left-side-down; }
+.left-middle { grid-area: left-middle; }
 
-.middle-up { grid-area: middle-up; }
+.left-down { grid-area: left-down; }
 
-.middle-down { grid-area: middle-down; }
+.middle { grid-area: middle; }
 
-.bottom-space { grid-area: bottom-space; }
-
-.right-side { grid-area: right-side; }
+.right { grid-area: right; }
 
 
 
