--- a/src/app/auszahlen/auszahlen.component.html
+++ b/src/app/auszahlen/auszahlen.component.html
@@ -1,1 +1,12 @@
-<p>auszahlen works!</p>
+<div class="wrapper">
+  <h1>Überweisen</h1>
+<div class="container">
+  <div class="wrapper-1">
+  <form>
+    <input type="text" id="login" placeholder="Email">
+    <input type="password" id="password" placeholder="Passwort">
+    <input type="submit">
+  </form>
+  </div>
+</div>
+</div>
