--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -22,7 +22,7 @@
 
     <!-- Passwort vergessen -->
     <div id="formFooter">
-      <a class="underlineHover">Password vergessen?</a>
+      <a class="underlineHover">Passwort vergessen?</a>
     </div>
 
   </div>
