--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -26,7 +26,7 @@
 
     <!-- Passwort vergessen -->
     <div id="formFooter">
-      <a class="underlineHover">Password vergessen?</a>
+      <a class="underlineHover">Passwort vergessen?</a>
     </div>
 
   </div>
