--- a/src/app/meinkonto/meinkonto.component.html
+++ b/src/app/meinkonto/meinkonto.component.html
@@ -5,7 +5,8 @@
     <div class="name">
       <h1 class="header">Mein Konto</h1>
       <h2 class="names">Hallo xyz</h2></div>
-    <div class="kontostands"><h2 class="kontostand">Aktueller Kontostand: 20.154,54€</h2></div>
+    <div class="kontostands"><h2 class="kontostand">Aktueller Kontostand:{{display.userId | json}}€</h2></div>
+
     <div class="content">
       <h2 class="Kontonummer">Kontonummer: 5435464</h2>
       <h2 class="Email">Emailadresse: xyz@email.com</h2>
@@ -13,4 +14,6 @@
     </div>
     <div class="nothing"></div>
   </div>
+
 </div>
+<button id="testbutton" (click)="function()"></button>
