--- a/src/app/meinkonto/meinkonto.component.css
+++ b/src/app/meinkonto/meinkonto.component.css
@@ -1,5 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap');
-
+h1{
+  font-size: 20pt;
+}
 
 h1, h2 {
   color: #fff;
@@ -56,7 +58,23 @@ h1, h2 {
 
 .nothing { grid-area: nothing; }
 
+
 button {
-  background-color:forestgreen;
-  
+  box-shadow:inset 0px 10px 29px -7px #276873;
+  background:linear-gradient(to bottom, #599bb3 5%, #408c99 100%);
+  background-color:#599bb3;
+  border-radius:3px;
+  display:inline-block;
+  cursor:pointer;
+  color:#ffffff;
+  font-family:sans-serif;
+  font-size:22px;
+  font-weight:bold;
+  font-style:italic;
+  padding:20px 20px;
+  text-decoration:none;
+  text-shadow:0px 1px 4px #3d768a;
 }
+
+
+
