--- a/src/app/card/card.component.html
+++ b/src/app/card/card.component.html
@@ -1,7 +1,7 @@
 <div class="card">
   <div class="grid-container">
   <div class="left-up"><p class="title">Amazon</p></div>
-  <div class="left-middle"><p class="subTitle">Brett</p></div>
+  <div class="left-middle"><p class="subTitle">Bett</p></div>
   <div class="left-down"></div>
   <div class="middle"></div>
   <div class="right"><p class="trans">-30.00€</p></div>
