--- a/src/app/meinkonto/meinkonto.component.html
+++ b/src/app/meinkonto/meinkonto.component.html
@@ -4,12 +4,12 @@
   <div class="grid-container">
     <div class="name">
       <h1 class="header">Mein Konto</h1>
-      <h2 class="names">Hallo {{display.userName | json}}</h2></div>
+      <h2 class="names">Hallo {{display.title | json}}</h2></div>
     <div class="kontostands"><h2 class="kontostand">Aktueller Kontostand:{{display.userId | json}}€</h2></div>
 
     <div class="content">
       <h2 class="Kontonummer">Kontonummer: {{display.userId | json}}</h2>
-      <h2 class="Email">Emailadresse: {{display.userName | json}}</h2>
+      <h2 class="Email">Emailadresse: {{display.title | json}}</h2>
       <h2 class="tele">Telefonnummer: {{display.userId | json}}</h2>
     </div>
     <div class="nothing"></div>
