--- a/src/app/meinkonto/meinkonto.component.html
+++ b/src/app/meinkonto/meinkonto.component.html
@@ -4,16 +4,16 @@
   <div class="grid-container">
     <div class="name">
       <h1 class="header">Mein Konto</h1>
-      <h2 class="names">Hallo {{display.title | json}}</h2></div>
-    <div class="kontostands"><h2 class="kontostand">Aktueller Kontostand:{{display.userId | json}}€</h2></div>
+      <h2 class="names">Hallo {{display.firstName}}{{display.lastName}}</h2></div>
+    <div class="kontostands"><h2 class="kontostand">Aktueller Kontostand:{{display.balance | json}}€</h2></div>
 
     <div class="content">
-      <h2 class="Kontonummer">Kontonummer: {{display.userId | json}}</h2>
-      <h2 class="Email">Emailadresse: {{display.title | json}}</h2>
-      <h2 class="tele">Telefonnummer: {{display.userId | json}}</h2>
+      <h2 class="Kontonummer">Kontonummer: {{display.accountNumber}}</h2>
+      <h2 class="Email">Emailadresse: {{display.emailAddress}}</h2>
+      <h2 class="tele">Telefonnummer: {{display.phoneNumber}}</h2>
     </div>
     <div class="nothing"></div>
   </div>
 
 </div>
-<button id="testbutton" (click)="function()"></button>
+<button id="testbutton" (click)="get()"></button>
