add get and cookies

--- a/src/app/transaktion/transaktion.component.html
+++ b/src/app/transaktion/transaktion.component.html
@@ -1,7 +1,7 @@
 <div class="grid-container">
   <div class="title">
     <h1>Transaktionen</h1>
-    <h2>20.345,57 €</h2>
+    <h2>{{display.balance | json}}€</h2>
   </div>
   <div class="btn">
       <i class="fa fa-plus fa-2x"></i>
