--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,7 +1,7 @@
 <ul>
   <li><a routerLink="/login"><i class="fa fa-user fa-2x"></i>Login</a></li>
-  <li><a routerLink="/transaktion"><i class="fa fa-reorder fa-2x"></i>Transaktionen</a></li>
+  <li><a (click)="loginCheckTransaktion()"><i class="fa fa-reorder fa-2x"></i>Transaktionen</a></li>
 
-  <li style="float:right"><a routerLink="/konto" class="active" ><i class="fa fa-user-circle fa-2x"></i>Mein Konto</a></li>
+  <li style="float:right"><a (click)="loginCheckMeinKonto()" class="active" ><i class="fa fa-user-circle fa-2x"></i>Mein Konto</a></li>
 
 </ul>
