--- a/src/app/transaktion/transaktion.component.html
+++ b/src/app/transaktion/transaktion.component.html
@@ -3,8 +3,11 @@
     <h1>Transaktionen</h1>
     <h2>{{display.balance | json}}€</h2>
   </div>
-  <div class="btn">
-      <i class="fa fa-plus fa-2x"></i>
+  <div class="btn1">
+      <i class="fa fa-plus fa-2x" routerLink="/einzahlen"></i>
+  </div>
+  <div class="btn2">
+    <i class="fa fa-minus fa-2x" routerLink="/auszahlen"></i>
   </div>
   <div class="content">
     <app-card></app-card>
