--- a/src/app/transaktion/transaktion.component.css
+++ b/src/app/transaktion/transaktion.component.css
@@ -20,13 +20,14 @@ h2 {
 
 }
 
-.btn {
+.btn1 {
   color: white;
   background-color: #39ace7;
   width: 50px;
   height: 50px;
   border-radius: 100%;
   position: absolute;
+  right: 560px;
   text-align: center;
   margin-top: 4%;
   margin-left: 65%;
@@ -37,18 +38,33 @@ h2 {
   transition: ease-in 0.1s;
 }
 
-.btn:hover {
+.btn1:hover {
     background-color: #00a9bf;
   box-shadow: 0px 0px 20px 10px rgba(0,0,0,0.70);
   }
 
+.btn2 {
+  color: white;
+  background-color: #39ace7;
+  width: 50px;
+  height: 50px;
+  border-radius: 100%;
+  position: absolute;
+  right: 480px;
+  text-align: center;
+  margin-top: 4%;
+  margin-left: 65%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  box-shadow: 0px 0px 20px 10px rgba(0,0,0,0.30);
+  transition: ease-in 0.1s;
+}
 
-
-
-
-
-
-
+.btn2:hover {
+  background-color: #00a9bf;
+  box-shadow: 0px 0px 20px 10px rgba(0,0,0,0.70);
+}
 
 
 .grid-container {
@@ -57,13 +73,14 @@ h2 {
   grid-template-rows: 1fr 1fr 1fr;
   gap: 0px 0px;
   grid-template-areas:
-    "title btn"
+    "title btn1"
+    "title btn2"
     "content content"
     "content content";
 }
 
 .title { grid-area: title; }
 
-.btn { grid-area: btn; }
+.btn1 { grid-area: btn1; }
 
 .content { grid-area: content; }
