add css for auszahlung and einzahlung

--- a/src/app/auszahlen/auszahlen.component.html
+++ b/src/app/auszahlen/auszahlen.component.html
@@ -4,7 +4,7 @@
   <div class="wrapper-1">
   <form>
     <input #betrag type="betrag"  placeholder="Auszahlungsbetrag" >
-    <input (click)="auszahlen(betrag.value)" type="submita" placeholder ="Auszahlen">
+    <input type="submit" (click)="auszahlen(betrag.value)" type="submita" placeholder ="Auszahlen">
   </form>
   </div>
 </div>
