--- a/src/app/einzahlen/einzahlen.component.css
+++ b/src/app/einzahlen/einzahlen.component.css
@@ -1,29 +1,10 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap');
-.title {
-  color: white;
-  font-family: 'Roboto', sans-serif;
-}
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap');
 
 h1 {
-  color: white;
-  font-family: 'Roboto', sans-serif;
-  letter-spacing: 2px;
-  margin-left: 50%;
-  margin-bottom: 5%;
-  margin-top: 4%;
-  text-shadow: 2px 2px 20px #111111;
+  font-family:'Roboto', sans-serif;
+  color: #fff;
 }
 
-h2 {
-  text-shadow: 2px 2px 20px #111111;
-  color: white;
-  font-family: 'Roboto', sans-serif;
-  margin-left: 50%;
-  margin-bottom: 5%;
-  letter-spacing: 2px;
-
-}
 .container {
   height: 800px;
   width: 500px;
@@ -120,106 +101,4 @@ input[type=betrag]:focus {
 
 input[type=betrag]::placeholder {
   color: #cccccc;
-}
-
-.btn1 {
-  color: white;
-  background-color: #39ace7;
-  width: 50px;
-  height: 50px;
-  border-radius: 100%;
-  position: absolute;
-  right: 560px;
-  text-align: center;
-  margin-top: 4%;
-  margin-left: 65%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  box-shadow: 0px 0px 20px 10px rgba(0,0,0,0.30);
-  transition: ease-in 0.1s;
-}
-
-.btn1:hover {
-  background-color: #00a9bf;
-  box-shadow: 0px 0px 20px 10px rgba(0,0,0,0.70);
-}
-
-.btn2 {
-  color: white;
-  background-color: #39ace7;
-  width: 50px;
-  height: 50px;
-  border-radius: 100%;
-  position: absolute;
-  right: 480px;
-  text-align: center;
-  margin-top: 4%;
-  margin-left: 65%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  box-shadow: 0px 0px 20px 10px rgba(0,0,0,0.30);
-  transition: ease-in 0.1s;
-}
-
-.btn2:hover {
-  background-color: #00a9bf;
-  box-shadow: 0px 0px 20px 10px rgba(0,0,0,0.70);
-}
-
-
-.grid-container {
-  display: grid;
-  grid-template-columns: 1fr 1fr;
-  grid-template-rows: 1fr 1fr 1fr;
-  gap: 0px 0px;
-  grid-template-areas:
-    "title btn1"
-    "title btn2"
-    "content content"
-    "content content";
-}
-
-.title { grid-area: title; }
-
-.btn1 { grid-area: btn1; }
-
-.content { grid-area: content; }
-
-input[type=button], input[type=submita], input[type=reset]  {
-  cursor: pointer;
-  background-color: #00a9bf;
-  position: center;
-  border: none;
-  color: white;
-  padding: 20px 80px;
-  margin-top: 20px;
-  text-align: center;
-  text-decoration: none;
-  display: inline-block;
-  text-transform: uppercase;
-  font-size: 13px;
-  -webkit-box-shadow: 0 10px 30px 0 rgba(95,186,233,0.4);
-  box-shadow: 0 0px 15px 0 rgba(95,186,233,0.4);
-  -webkit-border-radius: 5px 5px 5px 5px;
-  border-radius: 5px 5px 5px 5px;
-  margin: 5px 20px 40px 20px;
-  -webkit-transition: all 0.3s ease-in-out;
-  -moz-transition: all 0.3s ease-in-out;
-  -ms-transition: all 0.3s ease-in-out;
-  -o-transition: all 0.3s ease-in-out;
-  transition: all 0.3s ease-in-out;
-}
-
-input[type=button]:hover, input[type=submita]:hover, input[type=reset]:hover  {
-  background-color: #39ace7;
-}
-
-input[type=button]:active, input[type=submita]:active, input[type=reset]:active {
-  -moz-transform: scale(0.95);
-  -webkit-transform: scale(0.95);
-  -o-transform: scale(0.95);
-  -ms-transform: scale(0.95);
-  transform: scale(0.95);
 }
